# FE_LBM

./: .gitignore  CMakeLists.txt  README.md
Benchmarks/: lbm_test.cpp
cases/: case.yaml
src/boundary/: BoundaryCondition.hpp
src/core/: Fields.hpp  Grid.hpp  Lattice.cpp  Lattice.hpp  Parameters.hpp
src/solver/: LBMSolver.cpp  LBMSolver.hpp
